[gd_scene load_steps=4 format=3 uid="uid://boaxqdb7aubuo"]

[ext_resource type="Script" path="res://scenes/ItemSpawnSystem/item_spawn_system.gd" id="1_ovvkp"]
[ext_resource type="PackedScene" uid="uid://ixe60lhijorl" path="res://scenes/Item/item.tscn" id="2_1rcok"]
[ext_resource type="Texture2D" uid="uid://ds4cmr47731rt" path="res://assets/sprites/green_tea.png" id="4_8mcy1"]

[node name="ItemSpawnSystem" type="Node"]
script = ExtResource("1_ovvkp")
item_scene = ExtResource("2_1rcok")

[node name="VanillaChai" type="Sprite2D" parent="."]
visible = false
texture_filter = 3
position = Vector2(49, 50)
texture = ExtResource("4_8mcy1")

[node name="EffectTimer" type="Timer" parent="VanillaChai"]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="VanillaChai/EffectTimer" to="." method="_on_effect_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
